--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
 <h1>hello world</h1>
 <p>My lovely dog Kuki: <img src="IMG_E0827.JPG"> who I like to cuddle.
+<h1>hello world</h1>
+<h2>hello world</h2>
+<h3>hello world</h3>
+<h4>hello world</h4>
