--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<h1>hello world</h1>
+<style>
+#hw{
+color: red;
+    color: blue;
+    font-size: 200;
+    background-color: chartreuse;
+}
+</style> 
+<h1 id=hw>hello world</h1> 
 <p>My lovely dog Kuki: <img src="IMG_E0827.JPG"> who I like to cuddle.
 <h1>hello world</h1>
 <h2>hello world</h2>
