--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@ color: red;
     font-size: 200;
     background-color: chartreuse;
 }
+#moss {
+    color: darkgreen;
+    font-weight: bold;
+    font-size: 2vh;
+    background-color: cornsilk;
+}
+    
 </style> 
 <h1 id=hw>hello world</h1> 
 <p>My lovely dog Kuki: <img src="IMG_E0827.JPG"> who I like to cuddle.
@@ -16,7 +23,7 @@ color: red;
 <p> The sky and river reflecting white clouds in the sky are delicate shades of
 blue.
 
-<p>Soft lime greens for the mossy grass growing by the river and for the leaves of
+<p id=moss>Soft lime greens for the mossy grass growing by the river and for the leaves of
 the tree.
 
 <p>Terracotta pink for the roof of the house, a roof designed to keep the people
