--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@ color: red;
 }
 </style> 
 <h1 id=hw>hello world</h1> 
-<p>My lovely dog Kuki: <image src="IMG_E0827.JPG"> who I like to cuddle.
+<p>My lovely dog Kuki: <img src="IMG_E0827.JPG"> who I like to cuddle.
+<a href="https://en.wikipedia.org/wiki/Dog">Dog</a>
 <h1>hello world</h1>
 <h2>hello world</h2>
 <h3>hello world</h3>
