--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ color: red;
 <h1 id=hw>hello world</h1> 
 <p>My lovely dog Kuki: <img src="IMG_E0827.JPG"> who I like to cuddle.
 <a href="https://en.wikipedia.org/wiki/Dog">here is the Dog</a>
-<p>this is a picture of </p><a href="https://www.afsc.noaa.gov/Quarterly/amj2005/divrptsNMML3.htm">killer whale</a>
+<p>this is a picture of </p><a href="https://apps-afsc.fisheries.noaa.gov/Quarterly/amj2005/images/killerwhales.jpg">killer whale</a>
 <h1>hello world</h1>
 <h2>hello world</h2>
 <h3>hello world</h3>
