--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ color: red;
     
 </style> 
 <h1 id=hw>hello world</h1> 
-<p>My lovely dog Kuki: <img src="IMG_E0827.JPG"> who I like to cuddle.
+<p>My lovely dog Kuki: <img src="https://raw.githubusercontent.com/Maria-lim04/maria-lim04.github.io/main/IMG_E0827.JPG"> who I like to cuddle.
 <a href="https://en.wikipedia.org/wiki/Dog">here is the Dog</a>
 <p>this is a picture of </p><a href="https://apps-afsc.fisheries.noaa.gov/Quarterly/amj2005/images/killerwhales.jpg">killer whale</a>
 <h1>hello world</h1>
