--- a/resume.html
+++ b/resume.html
@@ -97,8 +97,8 @@ p {
 
 <h2>References</h2>
 <table border="0" cellpadding="5">
-<tr><td>Marina Flores García <a href="https://en.wikipedia.org/wiki/Puebla_Institute_of_Technology">Puebla Institute of Technology</a>        <td><a href="phone:2215871771">2215871771</a>
-<tr><td>Mario Alberto Flores García <a href="https://en.wikipedia.org/wiki/Puebla_Institute_of_Technology">Puebla Institute of Technology</a> <td><a href="phone:4423590295">4423590295</a>
+<tr><td>Marina Flores García <a href="https://en.wikipedia.org/wiki/Puebla_Institute_of_Technology"></a>        <td><a href="phone:2215871771">2215871771</a>
+<tr><td>Mario Alberto Flores García <a href="https://en.wikipedia.org/wiki/Puebla_Institute_of_Technology"></a> <td><a href="phone:4423590295">4423590295</a>
 <tr><td>Philip R Brenan, Director, Appa Apps Inc., Austin, Texas<td><a href="mailto:philiprbrenan@gmail.com">philiprbrenan@gmail.com</a>
 </table>
 </div>
